tests/NormalTests/paczka1/small_fuzzy/83348922.err
Error in line 5: T7o3Bm S903 46,7
Error in line 7: BY4 A409 72,5
Error in line 6: T7o3Bm A321 82,3
